# ebm

./: Cargo.toml
benches/: divan.rs
docs/: README.md
examples/: 300K_1year.json.conf  example.json.conf
scripts/: setup.py
src/: constants.rs  lib.rs  main.rs  physics.rs  tests.rs
src/physics/: tests.rs
