cargo-features = ["profile-rustflags"]

[package]
name = "EBM"
version = "0.2.0"
authors = ["Tim"]
edition = "2024"
description = "Some kind of simulation tool used by astrophysicsts for some kind of climate modelling."
readme = "README.md"
licence = "AGPL-3.0-or-later"

[lib]
name = "ebm_lib"
path = "src/lib.rs"

[[bin]]
name = "ebm"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
log = {version = "0.4.27", features = ["std"]}
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
astro-const = { git = "https://github.com/DynaClim/astro-const.git" }
math-macros = { git = "https://github.com/DynaClim/math-macros.git" }
sci-file = { git = "https://github.com/DynaClim/sci-file.git" }
simulation = { git = "https://github.com/DynaClim/simulation.git" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
#missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
