cargo-features = ["profile-rustflags"]

[package]
name = "ebm"
version = "0.3.0"
authors = ["Tim"]
edition = "2024"
description = "Some kind of simulation tool used by astrophysicsts for some kind of climate modelling."
readme = "README.md"
licence = "AGPL-3.0-or-later"

[lib]
name = "ebm_lib"
path = "src/lib.rs"

[[bin]]
name = "ebm"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
rustflags = ["-C", "target-cpu=native"]

[dependencies]
anyhow = "1.0.99"
log = {version = "0.4.27", features = ["std"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.143", features = ["float_roundtrip"] }
thiserror = "2.0.16"
astro-const = { git = "https://github.com/DynaClim/astro-const.git" }
simulation = { git = "https://github.com/DynaClim/simulation.git" }
sci-file = { git = "https://github.com/DynaClim/sci-file.git" }
math-macros = { git = "https://github.com/DynaClim/math-macros.git" }
rayon = "1.11.0"
itertools = "0.14.0"
divan = { version = "0.1.21", optional = true }

# This feature is purely for being able to execute divan benches.
# It is the easiest way to use divan without compiling benches
# into release builds.
# See: https://github.com/nvzqz/divan/issues/61#issuecomment-2438845647
[features]
divan = ["dep:divan"]

[[bench]]
name = "divan"
harness = false
required-features = ["divan"]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"
#missing_docs = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
